# hauth

./: README.md  hauth.cabal  stack.yaml
app/: Main.hs
src/: Hauth.hs
src/Hauth/: Authentication.hs
src/Hauth/Authentication/: CookieHelper.hs  Internals.hs
